# github_vuln_parser

./: Dockerfile  cpe_cve.py  docker-compose.yml  main.py  pyproject.toml
classes/: Parser.py
